--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex
@@ -40,7 +40,7 @@
 
     \newAlternative{A4: La cantidad de tela requerida ingresada es menor a cero.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error informando que la cantidad de tela necesaria ingresada es invalida.}
+    \alternativeRow{ZMGestion muestra un mensaje de error informando que la cantidad de tela necesaria ingresada es inválida.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
