--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRoles/borrarRol.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRoles/borrarRol.tex
@@ -20,7 +20,7 @@
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: Existe al menos un usuario con el rol seleccionado.}{2} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 2 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMgestion muestra un mensaje de error indicando que el rol no puede ser eliminado puesto que existe al menos un usuario con dicho rol.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que el rol no puede ser eliminado puesto que existe al menos un usuario con dicho rol.}
     \caseUseRow{El escenario vuelve al punto 1.}
     \caseUseRow{}
 }
