--- a/Informe Final/Capitulos/Capitulo4/CasosUso/Sesiones/cerrarSesion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/Sesiones/cerrarSesion.tex
@@ -12,7 +12,7 @@
 }
 \renewcommand{\caseUseScene}{
 	\addCaseUseStep{El usuario accede a la pantalla destinada para cerrar sesión.}
-	\addCaseUseStep{ZMGestion elimina el token de sesión del usuario y muestra un mensaje informando el éxito de la operación.}
+	\addCaseUseStep{ZMGestion cierra la sesión del usuario y muestra un mensaje informando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{
 	\caseUseRow{Ninguno.}
