--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/darBajaProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/darBajaProducto.tex
@@ -8,7 +8,7 @@
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador dar de baja un producto que se encuentra en estado activo.} %Resumen
 \renewcommand{\caseUsePeople}{Administrador: quiere dar de baja un producto.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
-	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoProductos (Buscar avanzado productos).} %Precondiciones
+	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoProductos\ (Buscar avanzado productos).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
@@ -18,9 +18,9 @@
     \addCaseUseStep{ZMGestion cambia el estado del producto a Baja y muestra un mensaje indicando que la operación se realizó con éxito.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El producto ya se encontraba en estado de baja.}{1} %Flujo alternativo A1.
+	\newAlternative{A1: El producto ya se encontraba en estado de Baja.}{1} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que el producto ya se encontraba en estado de baja.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que el producto ya se encontraba en estado de Baja.}
     \caseUseRow{El escenario vuelve al punto 1.}
     \caseUseRow{}
 }
