--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -529,6 +529,8 @@
 	Solo se especificarán los diagramas de estado más relevantes del sistema.
 
 	\stateDiagram{empleados}{Diagrama de estado - Empleados}
+	\stateDiagram{tareas}{Diagrama de estado - Tareas}
+	\stateDiagram{lineasProducto}{Diagrama de estado - Lineas de producto}
 	\stateDiagram{presupuestos}{Diagrama de estado - Presupuestos}
 	\stateDiagram{ventas}{Diagrama de estado - Ventas}
 	\stateDiagram{ordenesProduccion}{Diagrama de estado - Órdenes de producción}
